# OpenTake

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  NOTICE  README.ja.md  README.md  README.zh-CN.md
.claude/: launch.json
.github/workflows/: ci.yml
crates/opentake-agent/: Cargo.toml
crates/opentake-agent/src/: lib.rs
crates/opentake-agent/src/mcp/: core_handle.rs  dispatch.rs  mod.rs
crates/opentake-agent/src/plugin/: mod.rs  model.rs  registry.rs  rules.rs
crates/opentake-agent/src/plugin/builtin/audio-first/: instructions.md  plugin.json
crates/opentake-agent/src/prompt/: assemble.rs  base.rs  mod.rs
crates/opentake-agent/src/signal/: classify.rs  engine.rs  mod.rs  rules.rs  stages.rs  track_roles.rs
crates/opentake-agent/src/tools/: args.rs  descriptions.rs  encode_timeline.rs  errors.rs  mod.rs  names.rs  result.rs  short_id.rs
crates/opentake-core/: Cargo.toml
crates/opentake-core/src/: core.rs  deps.rs  dto.rs  error.rs  events.rs  lib.rs  session.rs
crates/opentake-domain/: Cargo.toml
crates/opentake-domain/src/: caption_sync.rs  clip.rs  clip_type.rs  grade.rs  keyframe.rs  lib.rs  media.rs  signal.rs  split.rs  subtitle_export.rs  text.rs  timeline.rs  transform.rs
crates/opentake-gen/: Cargo.toml
crates/opentake-gen/src/: build_params.rs  client.rs  error.rs  job.rs  keys.rs  lib.rs  params.rs  transport.rs
crates/opentake-gen/src/catalog/: builtin.rs  builtin_catalog.json  cost.rs  entry.rs  mod.rs
crates/opentake-gen/src/provider/: elevenlabs.rs  fal.rs  mod.rs  openai.rs  replicate.rs
crates/opentake-media/: Cargo.toml
crates/opentake-media/src/: cache_key.rs  error.rs  ff.rs  frame.rs  index_coordinator.rs  lib.rs  library.rs  probe.rs
crates/opentake-media/src/decode/: frame.rs  mod.rs  pcm.rs
crates/opentake-media/src/encode/: mod.rs  preset.rs
crates/opentake-media/src/ort_worker/: mod.rs  tensor.rs
crates/opentake-media/src/search/: config.rs  embed_store.rs  embedder.rs  frame_sampler.rs  indexer.rs  mod.rs  model_download.rs  ort_embedder.rs  ranker.rs  tokenizer.rs
crates/opentake-media/src/thumbnail/: mod.rs  sprite.rs
crates/opentake-media/src/transcribe/: cache.rs  locale.rs  mod.rs  search.rs  whisper.rs
crates/opentake-media/src/waveform/: dsp.rs  mod.rs  store.rs
crates/opentake-media/tests/: ffmpeg_integration.rs
crates/opentake-motion/: Cargo.toml
crates/opentake-motion/src/: cache.rs  error.rs  integration.rs  lib.rs  manifest.rs  renderer.rs  sandbox.rs  source.rs
crates/opentake-motion/tests/: pipeline.rs
crates/opentake-ops/: Cargo.toml
crates/opentake-ops/src/: command.rs  editor_state.rs  id.rs  lib.rs
crates/opentake-ops/src/engines/: mod.rs  overwrite.rs  ripple.rs  snap.rs
crates/opentake-ops/src/ops/: clear_region.rs  duplicate.rs  folders.rs  linking.rs  mod.rs  move_clips.rs  place.rs  ripple.rs  split.rs  tracks.rs  trim.rs
crates/opentake-ops/tests/: command_apply.rs
crates/opentake-project/: Cargo.toml
crates/opentake-project/src/: archive.rs  bundle.rs  error.rs  fcpxml.rs  gen_log.rs  layout.rs  lib.rs
crates/opentake-project/tests/: archive.rs  roundtrip.rs  upstream_compat.rs
crates/opentake-project/tests/common/: mod.rs
crates/opentake-render/: Cargo.toml
crates/opentake-render/src/: lib.rs
crates/opentake-render/src/gpu/: compositor.rs  shader.wgsl
crates/opentake-render/src/plan/: affine.rs  build.rs  types.rs
crates/opentake-render/tests/: gpu_downscaled_nat.rs  gpu_effects.rs  gpu_smoke.rs
docs/: ADVANCED-FEATURES.md  ARCHITECTURE.md  CAPCUT-GAP.md  MODULE-PORT-MAP.md  MOTION-GRAPHICS-PLUGIN.md  PORT-1TO1-GAP.md  ROADMAP.md
docs/_analysis/: 01-架构与数据流.md  02-苹果框架可移植性.md  03-闭源云边界.md  04-MCP与Agent工具.md  README.md  capcut-gap.raw.json  upstream-analysis.raw.json
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  export.rs  lib.rs  library.rs  main.rs  media.rs  playback.rs  render.rs
src-tauri/tests/: export_integration.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/agent/: AgentPanel.tsx
web/src/components/home/: HomeView.tsx
web/src/components/inspector/: Inspector.tsx  ScrubbableNumberField.tsx  SwapMediaSection.tsx  TextTab.tsx
web/src/components/media/: LibraryView.tsx  MediaPanel.tsx  MediaTabBar.tsx  favorites.test.ts  favorites.ts
web/src/components/preview/: Preview.tsx  TimelinePlaybackLayer.tsx  playbackClock.ts  timelinePlayback.test.ts  timelinePlayback.ts  useTimelineFrame.ts
web/src/components/settings/: SettingsView.tsx
web/src/components/shell/: EditorSplit.tsx  SplitPane.tsx  TitleBar.tsx  ViewMenu.tsx
web/src/components/timeline/: ClipContextMenu.tsx  Playhead.tsx  SnapIndicator.tsx  SwapMediaPicker.tsx  TimelineContainer.tsx  TimelineRegion.tsx  TrackHeaderColumn.tsx  clipRenderer.test.ts  clipRenderer.ts  hitTest.test.ts  hitTest.ts  rulerCanvas.ts  timelineCanvas.ts
web/src/components/toolbar/: Toolbar.tsx
web/src/components/ui/: Dropdown.tsx  HoverButton.tsx  Icon.tsx  PanelShell.tsx
web/src/hooks/: useAutosave.ts  useKeyboardShortcuts.ts  usePlaybackTicker.ts
web/src/i18n/: dict.ts  index.ts
web/src/lib/: api.ts  asset.ts  clip.test.ts  clip.ts  dialog.ts  fallback.ts  geometry.test.ts  geometry.ts  libraryApi.ts  ruler.test.ts  ruler.ts  snap.ts  theme.ts  types.ts  zones.test.ts  zones.ts
web/src/store/: clipboardStore.ts  editActions.test.ts  editActions.ts  libraryStore.test.ts  libraryStore.ts  mediaActions.ts  mediaStore.ts  projectActions.ts  projectStore.ts  recentStore.ts  settingsStore.ts  sync.ts  uiStore.ts
web/src/styles/: global.css  tokens.css
