[package]
name = "opentake-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Assembly: EditorState (timeline + manifest), command routing, event bus."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
opentake-domain = { workspace = true }
opentake-ops = { workspace = true }
opentake-project = { workspace = true }
thiserror = "2"
