[package]
name = "opentake-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Value-type domain model: Timeline/Track/Clip/Keyframe and pure derived functions. Zero IO."

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
